syntax = "proto3";

option csharp_namespace = "ProductService";

service GrpcProduct {
  rpc GetProduct(GrpcProductRequest) returns (GrpcProductResponse);
  rpc GetProductsByIds(GetProductsByIdsGrpcRequest) returns (GetProductsByIdsGrpcResponse);
}

message GrpcProductModel {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  string thumbnailUrl = 5;
}

message GrpcProductRequest {
  int32 id = 1;
}

message GrpcProductResponse {
  GrpcProductModel product = 1;
}

message GetProductsByIdsGrpcRequest {
	repeated int32 ids = 1;
}

message GetProductsByIdsGrpcResponse {
	repeated GrpcProductModel products = 1;
}
